# VRGestureCustomizability

./: .gitignore
GestureBuilder/: README.md  pyproject.toml  requirements.txt  setup.py
GestureBuilder/examples/: auto_delete_start.py  comparing_sequences.py  convert_raw_to_processed.py  prepare_data.py  run_VQVAE.py  train_VQVAE.py  visualize_hands.py
GestureBuilder/output/: hand_animation-Evan.html  hand_animation-multiple-wrist_only.html  hand_animation-multiple.html  hand_animation-right_jab-1.html  hand_animation-right_jab-2.html  hand_animation-right_jab-3.html  hand_animation.html  vqvae_hand_model.pt
GestureBuilder/output/logs/: training_log_20251013_140013.txt
GestureBuilder/server/: gesture_server.py
GestureBuilder/server/config/: config.yaml
GestureBuilder/server/database/: stored_gesture_templates-Participant2.json  stored_gesture_templates-Participant3.json  stored_gesture_templates-Participant4.json  stored_gesture_templates-Test1.json  stored_gesture_templates.json
GestureBuilder/server/database/raw_data/: live_recordings-Chitsein-Cast Fireball 1.csv  live_recordings-Chitsein-Cast Fireball 2.csv  live_recordings-Chitsein-Cast Ice 1.csv  live_recordings-Chitsein-Cast Ice 2.csv  live_recordings-Chitsein-Cast Ice 3.csv  live_recordings-Chitsein-Cast Lightning 1-Chopped.csv  live_recordings-Chitsein-Cast Lightning 1.csv  live_recordings-Chitsein-Cast Teleport 1.csv  live_recordings-Chitsein-Cast Teleport 2.csv  live_recordings-Chitsein-Show Teleport 1-Chopped.csv  live_recordings-Negative-Fists.csv  (+16 more)
GestureBuilder/src/GestureBuilder/: __init__.py
(+142 files in other folders)
