[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "GestureBuilder"
version = "0.1.0"
description = "A re-implementation of Gesture Builder with two-hand gesture recognition."
authors = [
  {name = "Chitsein Htun", email = "chtun@live.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "torch",
  "scikit-learn",
  "numpy>=1.20.0",
  "pandas>=1.3.0",
  "matplotlib",
  "plotly"
]

[project.urls]
"Homepage" = "https://github.com/Chtun/VRGestureCustomizability"

[tool.setuptools.packages.find]
where = ["src"]
